# hacking_playground

./: README.md
blog/: README.md  malicious_nfc.md
simple_binary_modification/: CMakeLists.txt  README.md
simple_binary_modification/src/: main.c
writeups/htb_beep/: htb_beep.md
writeups/htb_bizness/: htb_bizness.md
writeups/htb_codify/: htb_codify.md
writeups/htb_crafty/: htb_crafty.md
